--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,86 @@
         <p>Then throw her in the laundry room, which will hereafter be referred to as "the brig". Oh, I think we should just stay friends. You seem malnourished. Are you suffering from intestinal parasites? Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Yeah, I do that with my stupidness. There's one way and only one way to determine if an animal is intelligent. Dissect its brain! I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which I just made up. Uhh… also, comes with double prize money.</p>
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
+      <aside class="grid-aside">
+        <div class="aside-content group">
+          <h2>
+            <span class="group trending">
+              <i class="material-icons trending">trending_up</i>
+              Trending
+            </span>
+          </h2>
+          <ul>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Ow, my spirit! Oh dear! She's stuck in an infinite loop.
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Is the Space Pope reptilian!? Oh, all right, I am.
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              And so we say goodbye to our beloved pet, Nibbler, who's gone to a place where I, too, hope one day to go. The toilet.
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Hey! I'm a porno-dealing monster, what do I care what you think?
+            </li>
+          </ul>
+        </div>
+        <div class="aside-content group">
+          <h2>
+            <span class="group popular">
+              <i class="material-icons">whatshot</i>
+              Popular
+            </span>
+          </h2>
+          <ul>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Guards! Bring me the forms I need to fill out to have her taken away!
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Every other day it's food, food, food. Alright, I'll get you some stupid food.
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Ah, now the ball's in Farnsworth's court!
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              Besides, these are adult stemcells, harvested from perfectly healthy adults whom I killed for their stemcells.
+            </li>
+          </ul>
+        </div>
+        <div class="aside-content group">
+          <h2>
+            <span class="group just_added">
+              <i class="material-icons">fiber_new</i>
+              Just Added
+            </span>
+          </h2>
+          <ul>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              So I really am important? How I feel when I'm drunk is correct?
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              You will practice until you can make your bed in your sleep.
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              I will destroy you! Good news, everyone! There's a report on TV with some very bad news!
+            </li>
+            <li class="group">
+              <i class="material-icons">chevron_right</i>
+              We'll go deliver this crate like professionals, and then we'll go home. Anyone who laughs is a communist!
+            </li>
+          </ul>
+        </div>
+      </aside>
       <article>
         <h2>
           <span class="group">
