--- a/src/index.html
+++ b/src/index.html
@@ -71,18 +71,22 @@
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Ow, my spirit! Oh dear! She's stuck in an infinite loop.
+              <span class="posted_date">6D</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Is the Space Pope reptilian!? Oh, all right, I am.
+              <span class="posted_date">3H</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               And so we say goodbye to our beloved pet, Nibbler, who's gone to a place where I, too, hope one day to go. The toilet.
+              <span class="posted_date">21H</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Hey! I'm a porno-dealing monster, what do I care what you think?
+              <span class="posted_date">2W</span>
             </li>
           </ul>
         </div>
@@ -97,18 +101,22 @@
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Guards! Bring me the forms I need to fill out to have her taken away!
+              <span class="posted_date">4D</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Every other day it's food, food, food. Alright, I'll get you some stupid food.
+              <span class="posted_date">10H</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Ah, now the ball's in Farnsworth's court!
+              <span class="posted_date">11D</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               Besides, these are adult stemcells, harvested from perfectly healthy adults whom I killed for their stemcells.
+              <span class="posted_date">2M</span>
             </li>
           </ul>
         </div>
@@ -123,18 +131,22 @@
             <li class="group">
               <i class="material-icons">chevron_right</i>
               So I really am important? How I feel when I'm drunk is correct?
+              <span class="posted_date">5S</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               You will practice until you can make your bed in your sleep.
+              <span class="posted_date">17S</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
-              I will destroy you! Good news, everyone! There's a report on TV with some very bad news!
+              I will destroy you! Good news, everyone! There's a report on the TV with some very bad news!
+              <span class="posted_date">21S</span>
             </li>
             <li class="group">
               <i class="material-icons">chevron_right</i>
               We'll go deliver this crate like professionals, and then we'll go home. Anyone who laughs is a communist!
+              <span class="posted_date">3M</span>
             </li>
           </ul>
         </div>
