Change featured icon, add more filler text.
Changed the featured article icon to the material 'grade' icon.

Added a few more paragraphs to the featured article for teseting purposes.

closes #2

--- a/src/index.html
+++ b/src/index.html
@@ -52,11 +52,17 @@
           </span>
           <span class="group"><i class="material-icons">visibility</i>124.7k</span>
         </h2>
-        <img src="./img/animated_feature.gif" alt="vector graphic">
-        <i class="material-icons lg">whatshot</i>
+        <img src="./img/anim-feature.gif" alt="vector graphic">
+        <i class="material-icons lg">grade</i>
         <h3>Featured Article</h3>
         <p>Then throw her in the laundry room, which will hereafter be referred to as "the brig". Oh, I think we should just stay friends. You seem malnourished. Are you suffering from intestinal parasites? Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Yeah, I do that with my stupidness. There's one way and only one way to determine if an animal is intelligent. Dissect its brain! I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which I just made up. Uhh… also, comes with double prize money.</p>
         <p>Then throw her in the laundry room, which will hereafter be referred to as "the brig". Oh, I think we should just stay friends. You seem malnourished. Are you suffering from intestinal parasites? Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Yeah, I do that with my stupidness. There's one way and only one way to determine if an animal is intelligent. Dissect its brain! I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which I just made up. Uhh… also, comes with double prize money.</p>
+        <p>Professor, make a woman out of me. Bender, being God isn't easy. If you do too much, people get dependent on you, and if
+        you do nothing, they lose hope. You have to use a light touch. Like a safecracker, or a pickpocket.
+        <p>I could if you hadn't turned on the light and shut off my stereo. Bender, you risked your life to save me! WINDMILLS DO
+        NOT WORK THAT WAY! GOOD NIGHT! We can't compete with Mom! Her company is big and evil! Ours is small and neutral! No, I'm Santa Claus! Oh no! The professor will hit me! But if Zoidberg 'fixes' it… then perhaps gifts! If rubbin' frozen dirt in your crotch is wrong, hey I don't wanna be right. No, of course not. It was… uh… porno. Yeah, that's it.</p>
+        <p>Now Fry, it's been a few years since medical school, so remind me. Disemboweling in your species: fatal or non-fatal? And yet you haven't said what I told you to say! How can any of us trust you? It's okay, Bender. I like cooking too. Oh God, what have I done? Say what? I'm just glad my fat, ugly mama isn't alive to see this day. You mean while I'm sleeping in it? And remember, don't do anything that affects anything, unless it turns out you were supposed to, in
+        which case, for the love of God, don't not do it!</p>
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <aside class="grid-aside">
