--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
         <input type="text" name="filter_stories" id="main_search" placeholder="Enter search query here...">
       </div>
       <article id="featured_article">   
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             72.2k
@@ -158,7 +158,7 @@
         </div>
       </aside>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             1.2k
@@ -173,7 +173,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             3.1k
@@ -188,7 +188,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             322
@@ -203,7 +203,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             8.7k
@@ -218,7 +218,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             7.6k
@@ -233,7 +233,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             33.2k
@@ -248,7 +248,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             14.4k
@@ -263,7 +263,7 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <article>
-        <h2>
+        <h2 class="stats_bar">
           <span class="group">
             <i class="material-icons upvotes">thumb_up</i>
             1.2k
