Finishing up SASS clean up
All sass files should now be properly organized and much easier to read.
Also did some refactoring of certain classes for DRY reasons.

--- a/src/index.html
+++ b/src/index.html
@@ -17,13 +17,13 @@
     <header>
       <nav>
         <ul>
-          <div class="group">
+          <div class="flex_group">
             <li>Latest</li>
             <li>Trending</li>
-            <li><div class="group">Download <i class="material-icons">expand_more</i></div></li>
-            <li><div class="group">Store <i class="material-icons">expand_more</i></div></li>
+            <li><div class="flex_group">Download <i class="material-icons">expand_more</i></div></li>
+            <li><div class="flex_group">Store <i class="material-icons">expand_more</i></div></li>
           </div>
-          <div class="group">
+          <div class="flex_group">
             <li class="login-button">Login</li>
           </div>
         </ul>
@@ -38,19 +38,19 @@
       - Partial: _base.scss
     -->
     <main class="grid">
-      <div class="group search">
+      <div class="flex_group search">
         <i class="material-icons lg">search</i>
         <input type="text" name="filter_stories" id="main_search" placeholder="Enter search query here...">
       </div>
       <article id="featured_article">   
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             72.2k
             <i class="material-icons downvotes">thumb_down</i>
             15.5k
           </span>
-          <span class="group"><i class="material-icons">visibility</i>124.7k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>124.7k</span>
         </h2>
         <img src="./img/anim-feature.gif" alt="vector graphic">
         <i class="material-icons lg">grade</i>
@@ -66,90 +66,90 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
       <aside class="grid-aside">
-        <div class="aside-content group">
+        <div class="aside-content">
           <h2>
-            <span class="group trending">
+            <span class="flex_group trending">
               <i class="material-icons trending">trending_up</i>
               Trending
             </span>
           </h2>
           <ul>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Ow, my spirit! Oh dear! She's stuck in an infinite loop.
               <span class="posted_date">6D</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Is the Space Pope reptilian!? Oh, all right, I am.
               <span class="posted_date">3H</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               And so we say goodbye to our beloved pet, Nibbler, who's gone to a place where I, too, hope one day to go. The toilet.
               <span class="posted_date">21H</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Hey! I'm a porno-dealing monster, what do I care what you think?
               <span class="posted_date">2W</span>
             </li>
           </ul>
         </div>
-        <div class="aside-content group">
+        <div class="aside-content">
           <h2>
-            <span class="group popular">
+            <span class="flex_group popular">
               <i class="material-icons">whatshot</i>
               Popular
             </span>
           </h2>
           <ul>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Guards! Bring me the forms I need to fill out to have her taken away!
               <span class="posted_date">4D</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Every other day it's food, food, food. Alright, I'll get you some stupid food.
               <span class="posted_date">10H</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Ah, now the ball's in Farnsworth's court!
               <span class="posted_date">11D</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               Besides, these are adult stemcells, harvested from perfectly healthy adults whom I killed for their stemcells.
               <span class="posted_date">2M</span>
             </li>
           </ul>
         </div>
-        <div class="aside-content group">
+        <div class="aside-content">
           <h2>
-            <span class="group just_added">
+            <span class="flex_group just_added">
               <i class="material-icons">fiber_new</i>
               Just Added
             </span>
           </h2>
           <ul>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               So I really am important? How I feel when I'm drunk is correct?
               <span class="posted_date">5S</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               You will practice until you can make your bed in your sleep.
               <span class="posted_date">17S</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               I will destroy you! Good news, everyone! There's a report on the TV with some very bad news!
               <span class="posted_date">21S</span>
             </li>
-            <li class="group">
+            <li class="flex_group">
               <i class="material-icons">chevron_right</i>
               We'll go deliver this crate like professionals, and then we'll go home. Anyone who laughs is a communist!
               <span class="posted_date">3M</span>
@@ -159,13 +159,13 @@
       </aside>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             1.2k
             <i class="material-icons downvotes">thumb_down</i>
             321
           </span>
-          <span class="group"><i class="material-icons">visibility</i>1.6k</span> 
+          <span class="flex_group"><i class="material-icons">visibility</i>1.6k</span> 
         </h2>
         <i class="material-icons lg">accessibility</i>
         <h3>Article One</h3>
@@ -174,13 +174,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             3.1k
             <i class="material-icons downvotes">thumb_down</i>
             722
           </span>
-          <span class="group"><i class="material-icons">visibility</i>3.9k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>3.9k</span>
         </h2>
         <i class="material-icons lg">android</i>
         <h3>Article Two</h3>
@@ -189,13 +189,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             322
             <i class="material-icons downvotes">thumb_down</i>
             401
           </span>
-          <span class="group"><i class="material-icons">visibility</i>723</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>723</span>
         </h2>
         <i class="material-icons lg">fingerprint</i>
         <h3>Article Three</h3>
@@ -204,13 +204,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             8.7k
             <i class="material-icons downvotes">thumb_down</i>
             2.4k
           </span>
-          <span class="group"><i class="material-icons">visibility</i>11.1k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>11.1k</span>
         </h2>
         <i class="material-icons lg">blur_on</i>
         <h3>Article Four</h3>
@@ -219,13 +219,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             7.6k
             <i class="material-icons downvotes">thumb_down</i>
             628
           </span>
-          <span class="group"><i class="material-icons">visibility</i>8.2k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>8.2k</span>
         </h2>
         <i class="material-icons lg">developer_board</i>
         <h3>Article Five</h3>
@@ -234,13 +234,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             33.2k
             <i class="material-icons downvotes">thumb_down</i>
             8.8k
           </span>
-          <span class="group"><i class="material-icons">visibility</i>52.7k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>52.7k</span>
         </h2>
         <i class="material-icons lg">fiber_new</i>
         <h3>Article Six</h3>
@@ -249,13 +249,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             14.4k
             <i class="material-icons downvotes">thumb_down</i>
             3.1k
           </span>
-          <span class="group"><i class="material-icons">visibility</i>23.7k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>23.7k</span>
         </h2>
         <i class="material-icons lg">games</i>
         <h3>Article Seven</h3>
@@ -264,13 +264,13 @@
       </article>
       <article>
         <h2 class="stats_bar">
-          <span class="group">
+          <span class="flex_group">
             <i class="material-icons upvotes">thumb_up</i>
             1.2k
             <i class="material-icons downvotes">thumb_down</i>
             442
           </span>
-          <span class="group"><i class="material-icons">visibility</i>2.5k</span>
+          <span class="flex_group"><i class="material-icons">visibility</i>2.5k</span>
         </h2>
         <i class="material-icons lg">timeline</i>
         <h3>Article Eight</h3>
