--- a/src/index.html
+++ b/src/index.html
@@ -79,7 +79,7 @@
           </span>
           <span class="flex_group"><i class="material-icons">visibility</i>124.7k</span>
         </h2>
-        <img src="./img/anim-feature.gif" alt="vector graphic">
+        <video src="./img/anim_featured.mp4" autoplay loop></video>
         <i class="material-icons lg">grade</i>
         <h3>Featured Article</h3>
         <p>Then throw her in the laundry room, which will hereafter be referred to as "the brig". Oh, I think we should just stay friends. You seem malnourished. Are you suffering from intestinal parasites? Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Yeah, I do that with my stupidness. There's one way and only one way to determine if an animal is intelligent. Dissect its brain! I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which I just made up. Uhh… also, comes with double prize money.</p>
