--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
           </div>
         </ul>
       </nav>
-      <img src="./img/test_logo.svg" alt="Website Logo" />
+      <img id="" src="./img/test_logo.svg" alt="Map Logo">
       <h1>Shinier than yours, meatbag. Bender, quit destroying the universe!</h1>
     </header>
     <!-- Main Content
@@ -79,7 +79,7 @@
           </span>
           <span class="flex_group"><i class="material-icons">visibility</i>124.7k</span>
         </h2>
-        <video src="./img/anim_featured.mp4" autoplay loop></video>
+        <video src="./img/anim_featured.mp4" autoplay muted loop></video>
         <i class="material-icons lg">grade</i>
         <h3>Featured Article</h3>
         <p>Then throw her in the laundry room, which will hereafter be referred to as "the brig". Oh, I think we should just stay friends. You seem malnourished. Are you suffering from intestinal parasites? Yep, I remember. They came in last at the Olympics, then retired to promote alcoholic beverages! Yeah, I do that with my stupidness. There's one way and only one way to determine if an animal is intelligent. Dissect its brain! I decline the title of Iron Cook and accept the lesser title of Zinc Saucier, which I just made up. Uhh… also, comes with double prize money.</p>
@@ -321,6 +321,5 @@
         <button>Read More <i class="material-icons">forward</i></button>
       </article>
     </main>
-    </div>
   </body>
 </html>
